<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/photoOfCats"
                    android:layout_width="40dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/rus_blue_cat"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:id="@+id/headOfCats"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        tools:text="@string/sp_cat_american_short" />

                    <TextView
                        android:id="@+id/secondOfCats"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:textColor="@color/colorBlack"
                        android:textSize="12sp"
                        tools:text="@string/short_description" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/likedText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Вам понравилось"
                    android:textColor="@color/colorAccent"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/favoriteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="В избранном"
                    android:textColor="@color/colorGold"
                    android:visibility="invisible" />
            </LinearLayout>

            <TextView
                android:id="@+id/fullDescriptOfCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/cats_species_description_text"
                android:textSize="12sp" />

            <ListView
                android:id="@+id/catList"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:paddingTop="8dp"
                tools:ignore="NestedScrolling">

            </ListView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
